--- a/bookmarklet.html
+++ b/bookmarklet.html
@@ -1,1 +1,5 @@
-<a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='webattack.min.js';void(0);">WebAttack</a>
+<html>
+<body>
+	Drag this link to your bookmarks and click it on any page ! <a href="javascript:var%20s%20=%20document.createElement('script');s.type='text/javascript';document.body.appendChild(s);s.src='http://grsmto.com/lab/webattack/webattack.min.js';void(0);">WebAttack</a>
+</body>
+</html>
